# investmentops

./: ARCHITECTURE.md  CONFIGURATION.md  GOALS.md  PROGRESS.md  ROADMAP.md  TASKS.md  config.example.toml  gitignore  pyproject.toml
investmentops/: __init__.py  __main__.py
investmentops/ai_providers/: EXTENDING.md  __init__.py  anthropic_provider.py  contracts.py  factory.py  selection.py
investmentops/analysis_engines/: COMPARABLES_METRICS.md  FINANCIAL_HEALTH_METRICS.md  NEWS_RELEVANCE.md  STRATEGIES.md  STRATEGY_DATA_MAPPING.md  TREND_METRICS.md  VALUATION_METRICS.md  __init__.py  comparables.py  contracts.py  financial_health.py  growth.py  news_relevance.py  prompts.py  quality.py  trend.py  trends.py  valuation.py  value.py
investmentops/cli/: CLI.md  COMPARE_CLI.md  __init__.py
investmentops/config/: __init__.py
investmentops/core/: TREND_INTEGRATION.md  __init__.py  orchestrator.py  research_result.py
investmentops/data_layer/: CACHE.md  __init__.py  cache.py  comparables.py  domain.py  financial_statement_series.py  financial_statements.py  market_data.py  news.py  normalization.py
investmentops/data_providers/: COMPARABLES_PROVIDER.md  HISTORICAL_DATA.md  NEWS_PROVIDER.md  __init__.py  comparables.py  contracts.py  fundamentals.py  news.py
investmentops/reports/: HTML_TEMPLATE.md  REPORT_MODEL.md  REPORT_SECTIONS.md  TREND_PRESENTATION.md  VERDICT_REVIEW.md  __init__.py  html.py  markdown.py
prompts/: README.md  financial_health.md  growth.md  quality.md  report.md  valuation.md  value.md
tests/: test_core_orchestrator.py  test_environment.py
(+83 files in other folders)
