[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "investmentops"
version = "0.1.0"
description = "Herramienta CLI local de apoyo a la investigacion previa a una decision de inversion (ver GOALS.md)."
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
]

[project.optional-dependencies]
# Dependencias de desarrollo: pruebas y lint.
dev = [
    "pytest>=7.4",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
include = ["investmentops*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
